[gd_scene load_steps=10 format=2]

[ext_resource path="res://main/main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SceneManager.gd" type="Script" id=2]
[ext_resource path="res://UI UX/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pokemon_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CurrentScene.gd" type="Script" id=5]
[ext_resource path="res://UI UX/Control_tab.tscn" type="PackedScene" id=6]
[ext_resource path="res://libraries/Day_and_night/Day_And_night_cycle.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "method"
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_fading"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneManager" type="Node2D"]
script = ExtResource( 2 )

[node name="CurrentScene" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 5 )

[node name="Node2D" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="Pokemon_scene" parent="." instance=ExtResource( 4 )]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="ScreenTransition" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
margin_right = 240.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition/ColorRect"]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="Control_tab" parent="." instance=ExtResource( 6 )]

[node name="Day_And_night_cycle" parent="." instance=ExtResource( 7 )]
color = Color( 1, 1, 1, 1 )
